# triple-pendulum

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  deploy_to_hf.sh  project_initiation.md  pyproject.toml  run_gpu_simulations.py  run_simulations.py  serve.py
.github/workflows/: deploy-hf-spaces.yml
docs/: index.html  simulation_100_gpu.json  simulation_110_gpu.json  simulation_120_gpu.json  simulation_130_gpu.json  simulation_140_gpu.json  simulation_150_gpu.json  simulation_160_gpu.json  simulation_170_gpu.json  simulation_180_gpu.json  simulation_190_gpu.json  simulation_200_gpu.json  simulation_20_gpu.json  simulation_300_gpu.json  simulation_30_gpu.json  simulation_400_gpu.json  simulation_40_cpu.json  simulation_40_gpu.json  simulation_500_gpu.json  simulation_50_gpu.json  simulation_600_gpu.json  simulation_60_gpu.json  simulation_70_gpu.json  simulation_80_cpu.json  simulation_80_gpu.json  simulation_90_gpu.json  simulation_result.json  viewer-config.json  volume_rendering_research.md
hf-spaces/: README.md
notebooks/: exploration.ipynb
src/analysis/: comparison.py  energy.py  fractal.py
src/benchmarks/: performance.py
src/simulation/: batch_sim.py  cuda_sim.py  metrics.py  physics.py  symbolic.py
src/utils/: convert.py  downsample.py  grid.py  io.py  registry.py
src/visualization/: adaptive.py  colormap.py  slice_animation.py  viewer.html  vispy_viewer.py  volume_render.py
